ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stage1-newdevtest-ingress
  namespace: stage1-newdevtest
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  rules:
  - host: "kovaionplay.com"  # Root domain for frontend service
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stage1-newdevetest-frontend-service  # Frontend service
            port:
              number: 8081  # The port that the frontend service is exposing
  - host: "www.kovaionplay.com"  # www subdomain for frontend service
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stage1-newdevetest-frontend-service  # Frontend service
            port:
              number: 8081  # The port that the frontend service is exposing
